# SeeQt

./: .gitignore  AGENTS.md  README.md  SynapSee.py  bash.exe.stackdump  main.py  pyproject.toml  sleepscore.py  sleepscore_main.py  synapse_viewer.md  tiv.py  wrap_sleepscore.py
lab_notebook_gui/: README.md  lab_notebook_plan.md  main.py  requirements.txt
lab_notebook_gui/labnotebook/: __init__.py  app.py  attachments.py  canvas.py  directory_tree.py  metadata.py  notes.py  utils.py
lab_notebook_gui/tiffviewer/: __init__.py  viewer.py
sketch/: py_sketch.py
slap_wrappers/: gen_data.py  launch_dend_slapscore.py  launch_dir.py  launch_slapscore.py  launch_slapscore_mtx.py  launch_slapscore_vids.py  mtxquick.py  slap_score_windows.py  slap_score_windows_local.py  slap_win_utils.py  temp_hypnogram.csv  trace_colors.py
sleepscoring/: keys_and_colors.py  sleepscore_main.py  sleepscore_main_no_xlabel.py  sleepscoring_gui_ReadMe.md  state_definitions.json
synapse_roladex/: README.md  synapse_labeller.py
video_viewer/: loading.ipynb  video_viewer_description.md
video_viewer/video_viewer/: __init__.py  app.py  configuration.py  media.py  timeline.py  widgets.py
whisker/: format_data.ipynb  launch_whis.py  quickstart.md  trace_colors.py
whisker/materials/: launch_whis.py
whisker/sessionx/: SESSIONx_EVENTS.csv  SESSIONx_frames.csv  launch_whis.py
